--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 NEXT_PUBLIC_API_URL=https://snowtambackend-production.up.railway.app
 
 # NextAuth.js authentication settings
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://snowtam-production.up.railway.app
 NEXTAUTH_SECRET=x8Bf0BJxqlHdS8fpaKe9XbLZLlAzcm23wmzIW8uF9ug=
 
 # Example: OAuth provider credentials (Google, GitHub, etc.)
