--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NEXT_PUBLIC_API_URL=https://snowtambackend-production.up.railway.app
 
 # NextAuth.js authentication settings
 NEXTAUTH_URL=https://snowtam-production.up.railway.app
-NEXTAUTH_SECRET=x8Bf0BJxqlHdS8fpaKe9XbLZLlAzcm23wmzIW8uF9ug=
+NEXTAUTH_SECRET=nextsecret*&(*(J*(%^7858)))
 
 # Example: OAuth provider credentials (Google, GitHub, etc.)
 # GOOGLE_CLIENT_ID=your_google_client_id
