Update NEXTAUTH_URL in .env to point to the production environment

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 NEXT_PUBLIC_API_URL=https://snowtambackend-production.up.railway.app
 
 # NextAuth.js authentication settings
-NEXTAUTH_URL=https://snowtam-dusky.vercel.app
+NEXTAUTH_URL=https://snowtam-production.up.railway.app
 NEXTAUTH_SECRET=nextsecret*&(*(J*(%^7858)))
 
 # Example: OAuth provider credentials (Google, GitHub, etc.)
