--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "lucide-react": "^0.522.0",
+    "moment": "^2.30.1",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
