--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-dom": "19.0.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.6.0",
-    "tailwind-scrollbar": "^4.0.2"
+    "tailwind-scrollbar": "^4.0.2",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^22",
