--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.14.3",
     "@tanstack/react-query": "^5.81.2",
     "@types/d3-geo": "^3.1.0",
     "antd": "^5.26.1",
